packages/cli/src/tui/snapshots/envio__tui__testing__basic_colours.snap
---
source: packages/cli/src/tui/testing.rs
expression: "emulator.screen_text().join(\"\\n\")"
---
█▛▀▀ █▙  █ ▜▌ ▗█ █▌▗▟▀▀▙▖
█▛▀▘ █▛█▄█ ▝█▖█▘ █▌█▌  ▐█
█▙▄▄ █▌ ▜█  ▐█▛  █▌▝▜▄▄▛▘

Chain: 1 ⚡          25%
Blocks: 1,250,000 / 2,000,000  Events: 173,456

Chain: 8453 ⚡                                         100%
Blocks: 2,000,000 / 2,000,000 (End Block)  Events: 173,456

Total Events: 346,912 (10,000 events/sec)
Sync Time ETA: 1 minute (⠸ in progress)

GraphQL: http://localhost:8080 (password: testing)
