packages/cli/src/tui/snapshots/envio__tui__testing__clickhouse_only_screen.snap
---
source: packages/cli/src/tui/testing.rs
expression: emulator.svg().into_bytes()
extension: svg
snapshot_kind: binary
---
