packages/cli/src/tui/snapshots/envio__tui__testing__narrow_terminal.snap
---
source: packages/cli/src/tui/testing.rs
expression: "emulator.screen_text().join(\"\\n\")"
---
ENVIO

Chain: 1 ⚡25%
Blocks: 1,250,000 / 2,00
0,000 (End Block)
Events: 173,456

Total Events: 173,456 (5
,000 events/sec)
Sync Time ETA: 5 minutes
 (⠸ in progress)

GraphQL: http://localhos
t:8080 (password: testin
g)
