packages/cli/src/tui/snapshots/envio__tui__testing__synced.snap
---
source: packages/cli/src/tui/testing.rs
expression: "emulator.screen_text().join(\"\\n\")"
---
  envio@2.32.0 ~/code/projects/envio/uniswap-indexer

                                     ⢕⠕⠑⠑ ⢕⢕⠄ ⢕⠅⠐⢕  ⢔⠕⢐⢕ ⢀⠔⠕⠕⢔⠄
                                     ⢕⠕⠔⠔ ⢕⠕⢕⢄⢕⠅ ⢑⢅⢐⠕ ⢐⢕ ⢕⠅  ⢐⢕
                                     ⢕⢕⢔⢔⠄⢕⠅ ⠑⢕⠅  ⢕⢕⠁ ⢐⢕ ⠑⢕⢔⢔⠕⠁

  Ethereum 1         ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━  ✓  at end 21,000,000     1.2M events
  Base 8453          ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━  ✓  at head 24,118,903  903.4K events
  Arbitrum One 42161 ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━  ✓  at head 301,229,870 372.7K events

  ✓ synced in 4m 02s · 2,481,034 events

  GraphQL http://localhost:8080 (admin secret: testing)
  Console https://envio.dev/console
  ClickHouse http://localhost:8123/play

  ▲ Failed to load messages from envio server
