packages/cli/src/tui/snapshots/envio__tui__testing__synced_chains.snap
---
source: packages/cli/src/tui/testing.rs
expression: "emulator.screen_text().join(\"\\n\")"
---
█▛▀▀ █▙  █ ▜▌ ▗█ █▌▗▟▀▀▙▖
█▛▀▘ █▛█▄█ ▝█▖█▘ █▌█▌  ▐█
█▙▄▄ █▌ ▜█  ▐█▛  █▌▝▜▄▄▛▘

Chain: 1 ⚡                                            100%
Blocks: 2,000,000 / 2,000,000 (End Block)  Events: 173,456

Chain: 8453 ⚡                                         100%
Blocks: 2,000,000 / 2,000,000 (End Block)  Events: 173,456

Total Events: 346,912
Time Synced: 2 minutes (synced)

GraphQL: http://localhost:8080 (password: testing)
Dev Console: https://envio.dev/console
ClickHouse: http://localhost:8123/play

Notifications:
A new envio version is available
