packages/cli/src/tui/snapshots/envio__tui__testing__syncing_72.snap
---
source: packages/cli/src/tui/testing.rs
expression: "emulator.screen_text().join(\"\\n\")"
---
  envio@2.32.0 ~/code/projects/envio/uniswap-indexer

                       ⢕⠕⠑⠑ ⢕⢕⠄ ⢕⠅⠐⢕  ⢔⠕⢐⢕ ⢀⠔⠕⠕⢔⠄
                       ⢕⠕⠔⠔ ⢕⠕⢕⢄⢕⠅ ⢑⢅⢐⠕ ⢐⢕ ⢕⠅  ⢐⢕
                       ⢕⢕⢔⢔⠄⢕⠅ ⠑⢕⠅  ⢕⢕⠁ ⢐⢕ ⠑⢕⢔⢔⠕⠁

  Ethereum 1         ━━━━━━━━━─── 62% 16,820,000/21.0M     1.2M events
  Base 8453          ━━━━━━━━━━━━  ✓  at head 24,118,903 903.4K events
  Arbitrum One 42161 ━━━━━─────── 28% 120,344,364/301.2M 372.7K events

  ⠸ syncing · ETA 3m 06s · 2,481,034 events · 15,000/s

  GraphQL http://localhost:8080 (admin secret: testing)
  Console https://envio.dev/console

  ● Base HyperSync is 2x faster! pnpm up envio
